// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fieldAction is rendered 1`] = `
<div
  className="kbnFieldButton"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        className="kbnFieldButton__nameInner"
      >
        name
      </span>
    </span>
  </button>
  <div
    css={
      Object {
        "map": undefined,
        "name": "135l7mr",
        "next": undefined,
        "styles": "
            margin-left: 8px;
            line-height: 32px;
          ",
        "toString": [Function],
      }
    }
  >
    <span>
      fieldAction
    </span>
  </div>
</div>
`;

exports[`fieldIcon is rendered 1`] = `
<div
  className="kbnFieldButton"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__button"
    onClick={[Function]}
  >
    <span
      css={
        Object {
          "map": undefined,
          "name": "1nycr0t",
          "next": undefined,
          "styles": "
  flex-shrink: 0;
  line-height: 0;
",
          "toString": [Function],
        }
      }
    >
      <span>
        fieldIcon
      </span>
    </span>
    <span
      className="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        className="kbnFieldButton__nameInner"
      >
        name
      </span>
    </span>
  </button>
</div>
`;

exports[`isActive defaults to false 1`] = `
<div
  className="kbnFieldButton"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        className="kbnFieldButton__nameInner"
      >
        name
      </span>
    </span>
  </button>
</div>
`;

exports[`isActive renders true 1`] = `
<div
  className="kbnFieldButton"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        className="kbnFieldButton__nameInner"
      >
        name
      </span>
    </span>
  </button>
</div>
`;

exports[`sizes s is applied 1`] = `
<div
  className="kbnFieldButton"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        className="kbnFieldButton__nameInner"
      >
        name
      </span>
    </span>
  </button>
</div>
`;

exports[`sizes xs is applied 1`] = `
<div
  className="kbnFieldButton"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        className="kbnFieldButton__nameInner"
      >
        name
      </span>
    </span>
  </button>
</div>
`;

exports[`with drag handle is rendered 1`] = `
<div
  className="kbnFieldButton"
>
  <div
    css={
      Object {
        "map": undefined,
        "name": "55j5ev",
        "next": undefined,
        "styles": "
            margin-right: 8px;
            line-height: 32px;
          ",
        "toString": [Function],
      }
    }
  >
    <span>
      drag
    </span>
  </div>
  <button
    className="kbn-resetFocusState kbnFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        className="kbnFieldButton__nameInner"
      >
        name
      </span>
    </span>
  </button>
</div>
`;
